// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features dataSource createScriptureFeature should create a Scriptre feature 1`] = `
Object {
  "__typename": "ScriptureFeature",
  "id": 123,
  "reference": "John 3:16",
  "version": undefined,
}
`;

exports[`features dataSource createTextFeature should create a Text feature 1`] = `
Object {
  "__typename": "TextFeature",
  "body": "Hello World",
  "id": 123,
}
`;

exports[`features dataSource should create a PrayerListFeature from a DAILY_PRAYER algorithm 1`] = `
Object {
  "__typename": "PrayerListFeature",
  "id": "{\\"algorithms\\":[{\\"type\\":\\"DAILY_PRAYER\\"}],\\"title\\":\\"Test Action List\\",\\"subtitle\\":\\"It's great!\\",\\"isCard\\":true}",
  "isCard": true,
  "prayers": Array [
    Object {},
  ],
  "subtitle": "It's great!",
  "title": "Test Action List",
}
`;

exports[`features dataSource should create a PrayerListFeature from a DAILY_PRAYER algorithm 2`] = `Array []`;

exports[`features dataSource should create an ActionBarFeature 1`] = `
Object {
  "__typename": "ActionBarFeature",
  "actions": Array [
    Object {
      "action": "OPEN_URL",
      "icon": "Check",
      "relatedNode": Object {
        "__typename": "Url",
        "id": "Url:f4974a223763b3a06ea2cd73ff30952be89d6281e05bc41f7ee423cd227a2b00721f5531d36e54dd64bc05eda4a94cbf1fbaf45384b4e924ae0fe47ee8d4e792",
        "url": "https://www.google.com",
      },
      "title": "Check In",
    },
  ],
  "id": "{\\"title\\":\\"Test Action List\\",\\"algorithms\\":[],\\"actions\\":[{\\"title\\":\\"Check In\\",\\"icon\\":\\"Check\\",\\"action\\":\\"OPEN_URL\\",\\"relatedNode\\":{\\"__typename\\":\\"Url\\",\\"url\\":\\"https://www.google.com\\"}}]}",
  "title": "Test Action List",
}
`;

exports[`features dataSource should create an ActionListFeature from a CAMPAIGN_ITEMS algorithm 1`] = `
Object {
  "__typename": "ActionListFeature",
  "actions": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "channelSubtitle": "Featured Things",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "channelSubtitle": "Featured Things",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "channelSubtitle": "Featured Things",
        "contentChannel": null,
        "id": 3,
        "title": "third item by content channel id",
      },
      "subtitle": undefined,
      "summary": "summary data",
      "title": "third item by content channel id",
    },
  ],
  "id": "{\\"algorithms\\":[{\\"type\\":\\"CAMPAIGN_ITEMS\\"}],\\"title\\":\\"Test Featured Item\\",\\"subtitle\\":\\"It's featured!\\"}",
  "primaryAction": undefined,
  "subtitle": "It's featured!",
  "title": "Test Featured Item",
}
`;

exports[`features dataSource should create an ActionListFeature from a CAMPAIGN_ITEMS algorithm 2`] = `Array []`;

exports[`features dataSource should create an ActionListFeature from a CONTENT_CHANNEL algorithm 1`] = `
Object {
  "__typename": "ActionListFeature",
  "actions": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": null,
        "id": 3,
        "title": "third item by content channel id",
      },
      "subtitle": undefined,
      "summary": "summary data",
      "title": "third item by content channel id",
    },
  ],
  "id": "{\\"algorithms\\":[{\\"type\\":\\"CONTENT_CHANNEL\\",\\"arguments\\":{\\"contentChannelId\\":13}}],\\"title\\":\\"Test Action List\\",\\"subtitle\\":\\"It's great!\\"}",
  "primaryAction": undefined,
  "subtitle": "It's great!",
  "title": "Test Action List",
}
`;

exports[`features dataSource should create an ActionListFeature from a CONTENT_CHANNEL algorithm 2`] = `Array []`;

exports[`features dataSource should create an ActionListFeature from a CONTENT_CHANNEL algorithm with a primary action 1`] = `
Object {
  "__typename": "ActionListFeature",
  "actions": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": null,
        "id": 3,
        "title": "third item by content channel id",
      },
      "subtitle": undefined,
      "summary": "summary data",
      "title": "third item by content channel id",
    },
  ],
  "id": "{\\"algorithms\\":[{\\"type\\":\\"CONTENT_CHANNEL\\",\\"arguments\\":{\\"contentChannelId\\":13}}],\\"title\\":\\"Test Action List\\",\\"subtitle\\":\\"It's great!\\",\\"primaryAction\\":{\\"action\\":\\"OPEN_URL\\",\\"title\\":\\"Open this url\\",\\"relatedNode\\":{\\"__typename\\":\\"Url\\",\\"url\\":\\"https://www.google.com\\",\\"id\\":\\"Url:f4974a223763b3a06ea2cd73ff30952be89d6281e05bc41f7ee423cd227a2b00721f5531d36e54dd64bc05eda4a94cbf1fbaf45384b4e924ae0fe47ee8d4e792\\"}}}",
  "primaryAction": Object {
    "action": "OPEN_URL",
    "relatedNode": Object {
      "__typename": "Url",
      "id": "Url:f4974a223763b3a06ea2cd73ff30952be89d6281e05bc41f7ee423cd227a2b00721f5531d36e54dd64bc05eda4a94cbf1fbaf45384b4e924ae0fe47ee8d4e792",
      "url": "https://www.google.com",
    },
    "title": "Open this url",
  },
  "subtitle": "It's great!",
  "title": "Test Action List",
}
`;

exports[`features dataSource should create an ActionListFeature from a CONTENT_CHANNEL algorithm with a primary action 2`] = `Array []`;

exports[`features dataSource should create an ActionListFeature from a CONTENT_CHANNEL algorithm with a primary action with an id 1`] = `
Object {
  "__typename": "ActionListFeature",
  "actions": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": null,
        "id": 3,
        "title": "third item by content channel id",
      },
      "subtitle": undefined,
      "summary": "summary data",
      "title": "third item by content channel id",
    },
  ],
  "id": "{\\"algorithms\\":[{\\"type\\":\\"CONTENT_CHANNEL\\",\\"arguments\\":{\\"contentChannelId\\":13}}],\\"title\\":\\"Test Action List\\",\\"subtitle\\":\\"It's great!\\",\\"primaryAction\\":{\\"relatedNode\\":{\\"id\\":\\"Url123\\",\\"__typename\\":\\"Url\\",\\"url\\":\\"https://www.google.com\\"},\\"action\\":\\"OPEN_URL\\",\\"title\\":\\"Open this url\\"}}",
  "primaryAction": Object {
    "action": "OPEN_URL",
    "relatedNode": Object {
      "__typename": "Url",
      "id": "Url123",
      "url": "https://www.google.com",
    },
    "title": "Open this url",
  },
  "subtitle": "It's great!",
  "title": "Test Action List",
}
`;

exports[`features dataSource should create an ActionListFeature from a CONTENT_CHANNEL algorithm with a primary action with an id 2`] = `Array []`;

exports[`features dataSource should create an ActionListFeature from a CONTENT_CHANNEL algorithm with limit 1`] = `
Object {
  "__typename": "ActionListFeature",
  "actions": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": null,
        "id": 3,
        "title": "third item by content channel id",
      },
      "subtitle": undefined,
      "summary": "summary data",
      "title": "third item by content channel id",
    },
  ],
  "id": "{\\"algorithms\\":[{\\"type\\":\\"CONTENT_CHANNEL\\",\\"arguments\\":{\\"contentChannelId\\":13,\\"limit\\":1}}],\\"title\\":\\"Test Action List\\",\\"subtitle\\":\\"It's great!\\"}",
  "primaryAction": undefined,
  "subtitle": "It's great!",
  "title": "Test Action List",
}
`;

exports[`features dataSource should create an ActionListFeature from a CONTENT_CHANNEL algorithm with limit 2`] = `Array []`;

exports[`features dataSource should create an ActionListFeature from a PERSONA_FEED 1`] = `
Object {
  "__typename": "ActionListFeature",
  "actions": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 3,
        "title": "third item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "third item",
    },
  ],
  "id": "{\\"algorithms\\":[\\"PERSONA_FEED\\"],\\"title\\":\\"Test Action List\\",\\"subtitle\\":\\"It's great!\\"}",
  "primaryAction": undefined,
  "subtitle": "It's great!",
  "title": "Test Action List",
}
`;

exports[`features dataSource should create an ActionListFeature from a SERIES_IN_PROGRESS algorithm 1`] = `
Object {
  "__typename": "ActionListFeature",
  "actions": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": null,
        "id": 3,
        "title": "third item by content channel id",
      },
      "subtitle": undefined,
      "summary": "summary data",
      "title": "third item by content channel id",
    },
  ],
  "id": "{\\"algorithms\\":[{\\"type\\":\\"SERIES_IN_PROGRESS\\"}],\\"title\\":\\"Test Featured Item\\",\\"subtitle\\":\\"It's featured!\\"}",
  "primaryAction": undefined,
  "subtitle": "It's featured!",
  "title": "Test Featured Item",
}
`;

exports[`features dataSource should create an ActionListFeature from a SERMON_CHILDREN algorithm 1`] = `
Object {
  "__typename": "ActionListFeature",
  "actions": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": null,
        "id": 3,
        "title": "third item by content channel id",
      },
      "subtitle": undefined,
      "summary": "summary data",
      "title": "third item by content channel id",
    },
  ],
  "id": "{\\"algorithms\\":[\\"SERMON_CHILDREN\\"],\\"title\\":\\"Test Action List\\",\\"subtitle\\":\\"It's great!\\"}",
  "primaryAction": undefined,
  "subtitle": "It's great!",
  "title": "Test Action List",
}
`;

exports[`features dataSource should create an ActionListFeature from a SERMON_CHILDREN algorithm 2`] = `
Array [
  Array [],
]
`;

exports[`features dataSource should create an ActionListFeature from a UPCOMING_EVENTS 1`] = `
Object {
  "__typename": "ActionListFeature",
  "actions": Array [
    Object {
      "action": "READ_EVENT",
      "id": "1230",
      "image": Promise {},
      "relatedNode": Object {
        "__type": "Event",
        "eventItemId": "456",
        "id": "123",
        "schedule": Object {
          "effectiveStartDate": "2019-09-16T21:41:45.686Z",
        },
      },
      "subtitle": undefined,
      "summary": "",
      "title": Promise {},
    },
  ],
  "id": "{\\"algorithms\\":[\\"UPCOMING_EVENTS\\"],\\"title\\":\\"Test Action List\\",\\"subtitle\\":\\"It's great!\\"}",
  "primaryAction": undefined,
  "subtitle": "It's great!",
  "title": "Test Action List",
}
`;

exports[`features dataSource should create an ActionListFeature from a USER_FEED algorithm 1`] = `
Object {
  "__typename": "ActionListFeature",
  "actions": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": null,
        "id": 3,
        "title": "third item by content channel id",
      },
      "subtitle": undefined,
      "summary": "summary data",
      "title": "third item by content channel id",
    },
  ],
  "id": "{\\"algorithms\\":[{\\"type\\":\\"USER_FEED\\"}],\\"title\\":\\"Test Featured Item\\",\\"subtitle\\":\\"It's featured!\\"}",
  "primaryAction": undefined,
  "subtitle": "It's featured!",
  "title": "Test Featured Item",
}
`;

exports[`features dataSource should create an ActionListFeature from a USER_FEED algorithm 2`] = `Array []`;

exports[`features dataSource should create an ActionListFeature from multiple PERSONA_FEED algorithms 1`] = `
Object {
  "__typename": "ActionListFeature",
  "actions": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 3,
        "title": "third item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "third item",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 3,
        "title": "third item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "third item",
    },
  ],
  "id": "{\\"algorithms\\":[\\"PERSONA_FEED\\",\\"PERSONA_FEED\\"],\\"title\\":\\"Test Action List\\",\\"subtitle\\":\\"It's great!\\"}",
  "primaryAction": undefined,
  "subtitle": "It's great!",
  "title": "Test Action List",
}
`;

exports[`features dataSource should create an ActionListFeature from no algorithms 1`] = `
Object {
  "__typename": "ActionListFeature",
  "actions": Array [],
  "id": "{\\"algorithms\\":[],\\"title\\":\\"Test Action List\\",\\"subtitle\\":\\"It's great!\\"}",
  "primaryAction": undefined,
  "subtitle": "It's great!",
  "title": "Test Action List",
}
`;

exports[`features dataSource should create an ActionListFeature from two different algorithms 1`] = `
Object {
  "__typename": "ActionListFeature",
  "actions": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": null,
        "id": 3,
        "title": "third item by content channel id",
      },
      "subtitle": undefined,
      "summary": "summary data",
      "title": "third item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 3,
        "title": "third item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "third item",
    },
  ],
  "id": "{\\"algorithms\\":[{\\"type\\":\\"CONTENT_CHANNEL\\",\\"arguments\\":{\\"contentChannelId\\":13}},\\"PERSONA_FEED\\"],\\"title\\":\\"Test Action List\\",\\"subtitle\\":\\"It's great!\\"}",
  "primaryAction": undefined,
  "subtitle": "It's great!",
  "title": "Test Action List",
}
`;

exports[`features dataSource should create an HeroListFeature from a USER_FEED algorithm 1`] = `
Object {
  "__typename": "HeroListFeature",
  "actions": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": null,
        "id": 3,
        "title": "third item by content channel id",
      },
      "subtitle": undefined,
      "summary": "summary data",
      "title": "third item by content channel id",
    },
  ],
  "heroCard": Object {
    "action": "READ_CONTENT",
    "id": "10",
    "image": null,
    "relatedNode": Object {
      "__type": "UniversalContentItem",
      "contentChannel": Object {
        "name": "content channel",
      },
      "id": 1,
      "title": "first item by content channel id",
    },
    "subtitle": "content channel",
    "summary": "summary data",
    "title": "first item by content channel id",
  },
  "id": "{\\"algorithms\\":[{\\"type\\":\\"USER_FEED\\"}],\\"heroAlgorithms\\":[],\\"title\\":\\"Test HeroListFeature\\",\\"subtitle\\":\\"It's a hero list feature!\\"}",
  "primaryAction": undefined,
  "subtitle": "It's a hero list feature!",
  "title": "Test HeroListFeature",
}
`;

exports[`features dataSource should create an HeroListFeature from a USER_FEED algorithm and a primary action 1`] = `
Object {
  "__typename": "HeroListFeature",
  "actions": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": null,
        "id": 3,
        "title": "third item by content channel id",
      },
      "subtitle": undefined,
      "summary": "summary data",
      "title": "third item by content channel id",
    },
  ],
  "heroCard": Object {
    "action": "READ_CONTENT",
    "id": "10",
    "image": null,
    "relatedNode": Object {
      "__type": "UniversalContentItem",
      "contentChannel": Object {
        "name": "content channel",
      },
      "id": 1,
      "title": "first item by content channel id",
    },
    "subtitle": "content channel",
    "summary": "summary data",
    "title": "first item by content channel id",
  },
  "id": "{\\"algorithms\\":[{\\"type\\":\\"USER_FEED\\"}],\\"heroAlgorithms\\":[],\\"title\\":\\"Test HeroListFeature\\",\\"subtitle\\":\\"It's a hero list feature!\\",\\"primaryAction\\":{\\"action\\":\\"OPEN_URL\\",\\"title\\":\\"Open this url\\",\\"relatedNode\\":{\\"__typename\\":\\"Url\\",\\"url\\":\\"https://www.google.com\\",\\"id\\":\\"Url:f4974a223763b3a06ea2cd73ff30952be89d6281e05bc41f7ee423cd227a2b00721f5531d36e54dd64bc05eda4a94cbf1fbaf45384b4e924ae0fe47ee8d4e792\\"}}}",
  "primaryAction": Object {
    "action": "OPEN_URL",
    "relatedNode": Object {
      "__typename": "Url",
      "id": "Url:f4974a223763b3a06ea2cd73ff30952be89d6281e05bc41f7ee423cd227a2b00721f5531d36e54dd64bc05eda4a94cbf1fbaf45384b4e924ae0fe47ee8d4e792",
      "url": "https://www.google.com",
    },
    "title": "Open this url",
  },
  "subtitle": "It's a hero list feature!",
  "title": "Test HeroListFeature",
}
`;

exports[`features dataSource should create an HeroListFeature from a USER_FEED algorithm and a primary action with an id 1`] = `
Object {
  "__typename": "HeroListFeature",
  "actions": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": null,
        "id": 3,
        "title": "third item by content channel id",
      },
      "subtitle": undefined,
      "summary": "summary data",
      "title": "third item by content channel id",
    },
  ],
  "heroCard": Object {
    "action": "READ_CONTENT",
    "id": "10",
    "image": null,
    "relatedNode": Object {
      "__type": "UniversalContentItem",
      "contentChannel": Object {
        "name": "content channel",
      },
      "id": 1,
      "title": "first item by content channel id",
    },
    "subtitle": "content channel",
    "summary": "summary data",
    "title": "first item by content channel id",
  },
  "id": "{\\"algorithms\\":[{\\"type\\":\\"USER_FEED\\"}],\\"heroAlgorithms\\":[],\\"title\\":\\"Test HeroListFeature\\",\\"subtitle\\":\\"It's a hero list feature!\\",\\"primaryAction\\":{\\"relatedNode\\":{\\"__typename\\":\\"Url\\",\\"id\\":\\"Url:123\\",\\"url\\":\\"https://www.google.com\\"},\\"action\\":\\"OPEN_URL\\",\\"title\\":\\"Open this url\\"}}",
  "primaryAction": Object {
    "action": "OPEN_URL",
    "relatedNode": Object {
      "__typename": "Url",
      "id": "Url:123",
      "url": "https://www.google.com",
    },
    "title": "Open this url",
  },
  "subtitle": "It's a hero list feature!",
  "title": "Test HeroListFeature",
}
`;

exports[`features dataSource should create an HeroListFeature from a feed algorithm and a different hero algorithm  1`] = `
Object {
  "__typename": "HeroListFeature",
  "actions": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": null,
        "id": 3,
        "title": "third item by content channel id",
      },
      "subtitle": undefined,
      "summary": "summary data",
      "title": "third item by content channel id",
    },
  ],
  "heroCard": Object {
    "action": "READ_CONTENT",
    "id": "10",
    "image": null,
    "relatedNode": Object {
      "__type": "UniversalContentItem",
      "contentChannel": Object {
        "name": "content channel",
      },
      "id": 1,
      "title": "first item",
    },
    "subtitle": "content channel",
    "summary": "summary data",
    "title": "first item",
  },
  "id": "{\\"algorithms\\":[{\\"type\\":\\"USER_FEED\\"}],\\"heroAlgorithms\\":[{\\"type\\":\\"PERSONA_FEED\\"}],\\"title\\":\\"Test HeroListFeature\\",\\"subtitle\\":\\"It's a hero list feature!\\"}",
  "primaryAction": undefined,
  "subtitle": "It's a hero list feature!",
  "title": "Test HeroListFeature",
}
`;

exports[`features dataSource should create an HorizontalCardListFeature from a PERSONA_FEED 1`] = `
Object {
  "__typename": "HorizontalCardListFeature",
  "cards": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 3,
        "title": "third item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "third item",
    },
  ],
  "hyphenatedTitle": undefined,
  "id": "{\\"algorithms\\":[\\"PERSONA_FEED\\"],\\"title\\":\\"Test Horizontal List of Cards\\",\\"subtitle\\":\\"Boom\\"}",
  "primaryAction": undefined,
  "subtitle": "Boom",
  "title": "Test Horizontal List of Cards",
}
`;

exports[`features dataSource should create an VerticalCardListFeature from a PERSONA_FEED 1`] = `
Object {
  "__typename": "VerticalCardListFeature",
  "cards": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 3,
        "title": "third item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "third item",
    },
  ],
  "id": "{\\"algorithms\\":[\\"PERSONA_FEED\\"],\\"title\\":\\"Test Action List\\",\\"subtitle\\":\\"It's great!\\",\\"isFeatured\\":false}",
  "isFeatured": false,
  "subtitle": "It's great!",
  "title": "Test Action List",
}
`;

exports[`features dataSource should generate scripture shares 1`] = `"Not the real verse John 3:16"`;

exports[`features dataSource should lazy load running of attached algoritms: default (cards not loaded) 1`] = `
Object {
  "__typename": "ActionListFeature",
  "actions": [Function],
  "id": "{\\"algorithms\\":[{\\"type\\":\\"CAMPAIGN_ITEMS\\"}],\\"title\\":\\"Test Featured Item\\",\\"subtitle\\":\\"It's featured!\\"}",
  "primaryAction": undefined,
  "subtitle": "It's featured!",
  "title": "Test Featured Item",
}
`;

exports[`features dataSource should lazy load running of attached algoritms: with cards loaded 1`] = `
Object {
  "__typename": "ActionListFeature",
  "actions": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "channelSubtitle": "Featured Things",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "channelSubtitle": "Featured Things",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "channelSubtitle": "Featured Things",
        "contentChannel": null,
        "id": 3,
        "title": "third item by content channel id",
      },
      "subtitle": undefined,
      "summary": "summary data",
      "title": "third item by content channel id",
    },
  ],
  "id": "{\\"algorithms\\":[{\\"type\\":\\"CAMPAIGN_ITEMS\\"}],\\"title\\":\\"Test Featured Item\\",\\"subtitle\\":\\"It's featured!\\"}",
  "primaryAction": undefined,
  "subtitle": "It's featured!",
  "title": "Test Featured Item",
}
`;

exports[`features dataSource should recontruct a feature from it's id 1`] = `
Object {
  "__typename": "ActionListFeature",
  "actions": Array [
    Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "channelSubtitle": "Featured Things",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "21",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "channelSubtitle": "Featured Things",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 2,
        "title": "second item by content channel id",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "second item by content channel id",
    },
    Object {
      "action": "READ_CONTENT",
      "id": "32",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "channelSubtitle": "Featured Things",
        "contentChannel": null,
        "id": 3,
        "title": "third item by content channel id",
      },
      "subtitle": undefined,
      "summary": "summary data",
      "title": "third item by content channel id",
    },
  ],
  "id": "{\\"algorithms\\":[{\\"type\\":\\"CAMPAIGN_ITEMS\\"}],\\"title\\":\\"Test Featured Item\\",\\"subtitle\\":\\"It's featured!\\"}",
  "primaryAction": undefined,
  "subtitle": "It's featured!",
  "title": "Test Featured Item",
}
`;

exports[`features dataSource should render the HeroListFeature type from getHomeFeedFeatures 1`] = `
Array [
  Object {
    "__typename": "HeroListFeature",
    "actions": Array [
      Object {
        "action": "READ_CONTENT",
        "id": "21",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 2,
          "title": "second item",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "second item",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "32",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 3,
          "title": "third item",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "third item",
      },
    ],
    "heroCard": Object {
      "action": "READ_CONTENT",
      "id": "10",
      "image": null,
      "relatedNode": Object {
        "__type": "UniversalContentItem",
        "contentChannel": Object {
          "name": "content channel",
        },
        "id": 1,
        "title": "first item",
      },
      "subtitle": "content channel",
      "summary": "summary data",
      "title": "first item",
    },
    "id": "{\\"algorithms\\":[\\"PERSONA_FEED\\"],\\"heroAlgorithms\\":[],\\"title\\":\\"FOR YOU\\",\\"subtitle\\":\\"Explore what God calls you to today\\",\\"type\\":\\"HeroListFeature\\"}",
    "primaryAction": undefined,
    "subtitle": "Explore what God calls you to today",
    "title": "FOR YOU",
  },
  Object {
    "__typename": "ActionListFeature",
    "actions": Array [
      Object {
        "action": "READ_CONTENT",
        "id": "10",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 1,
          "title": "first item by content channel id",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "first item by content channel id",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "21",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 2,
          "title": "second item by content channel id",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "second item by content channel id",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "32",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": null,
          "id": 3,
          "title": "third item by content channel id",
        },
        "subtitle": undefined,
        "summary": "summary data",
        "title": "third item by content channel id",
      },
    ],
    "id": "{\\"algorithms\\":[{\\"type\\":\\"CONTENT_CHANNEL\\",\\"arguments\\":{\\"contentChannelId\\":13}}],\\"title\\":\\"BULLETIN\\",\\"subtitle\\":\\"What's happening at apollos?\\"}",
    "primaryAction": undefined,
    "subtitle": "What's happening at apollos?",
    "title": "BULLETIN",
  },
]
`;

exports[`features dataSource should render the HorizontalCardList type from getHomeFeedFeatures 1`] = `
Array [
  Object {
    "__typename": "HorizontalCardListFeature",
    "cards": Array [
      Object {
        "action": "READ_CONTENT",
        "id": "10",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 1,
          "title": "first item",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "first item",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "21",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 2,
          "title": "second item",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "second item",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "32",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 3,
          "title": "third item",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "third item",
      },
    ],
    "hyphenatedTitle": undefined,
    "id": "{\\"algorithms\\":[\\"PERSONA_FEED\\"],\\"title\\":\\"FOR YOU\\",\\"subtitle\\":\\"Explore what God calls you to today\\",\\"type\\":\\"HorizontalCardList\\"}",
    "primaryAction": undefined,
    "subtitle": "Explore what God calls you to today",
    "title": "FOR YOU",
  },
  Object {
    "__typename": "ActionListFeature",
    "actions": Array [
      Object {
        "action": "READ_CONTENT",
        "id": "10",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 1,
          "title": "first item by content channel id",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "first item by content channel id",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "21",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 2,
          "title": "second item by content channel id",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "second item by content channel id",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "32",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": null,
          "id": 3,
          "title": "third item by content channel id",
        },
        "subtitle": undefined,
        "summary": "summary data",
        "title": "third item by content channel id",
      },
    ],
    "id": "{\\"algorithms\\":[{\\"type\\":\\"CONTENT_CHANNEL\\",\\"arguments\\":{\\"contentChannelId\\":13}}],\\"title\\":\\"BULLETIN\\",\\"subtitle\\":\\"What's happening at apollos?\\"}",
    "primaryAction": undefined,
    "subtitle": "What's happening at apollos?",
    "title": "BULLETIN",
  },
]
`;

exports[`features dataSource should render the VerticalCardList type from getHomeFeedFeatures 1`] = `
Array [
  Object {
    "__typename": "VerticalCardListFeature",
    "cards": Array [
      Object {
        "action": "READ_CONTENT",
        "id": "10",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 1,
          "title": "first item",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "first item",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "21",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 2,
          "title": "second item",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "second item",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "32",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 3,
          "title": "third item",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "third item",
      },
    ],
    "id": "{\\"algorithms\\":[\\"PERSONA_FEED\\"],\\"title\\":\\"FOR YOU\\",\\"subtitle\\":\\"Explore what God calls you to today\\",\\"isFeatured\\":false,\\"type\\":\\"VerticalCardList\\"}",
    "isFeatured": false,
    "subtitle": "Explore what God calls you to today",
    "title": "FOR YOU",
  },
  Object {
    "__typename": "ActionListFeature",
    "actions": Array [
      Object {
        "action": "READ_CONTENT",
        "id": "10",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 1,
          "title": "first item by content channel id",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "first item by content channel id",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "21",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 2,
          "title": "second item by content channel id",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "second item by content channel id",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "32",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": null,
          "id": 3,
          "title": "third item by content channel id",
        },
        "subtitle": undefined,
        "summary": "summary data",
        "title": "third item by content channel id",
      },
    ],
    "id": "{\\"algorithms\\":[{\\"type\\":\\"CONTENT_CHANNEL\\",\\"arguments\\":{\\"contentChannelId\\":13}}],\\"title\\":\\"BULLETIN\\",\\"subtitle\\":\\"What's happening at apollos?\\"}",
    "primaryAction": undefined,
    "subtitle": "What's happening at apollos?",
    "title": "BULLETIN",
  },
]
`;

exports[`features dataSource should render the default case from getHomeFeedFeatures 1`] = `
Array [
  Object {
    "__typename": "ActionListFeature",
    "actions": Array [
      Object {
        "action": "READ_CONTENT",
        "id": "10",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 1,
          "title": "first item",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "first item",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "21",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 2,
          "title": "second item",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "second item",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "32",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 3,
          "title": "third item",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "third item",
      },
    ],
    "id": "{\\"algorithms\\":[\\"PERSONA_FEED\\"],\\"title\\":\\"FOR YOU\\",\\"subtitle\\":\\"Explore what God calls you to today\\"}",
    "primaryAction": undefined,
    "subtitle": "Explore what God calls you to today",
    "title": "FOR YOU",
  },
  Object {
    "__typename": "ActionListFeature",
    "actions": Array [
      Object {
        "action": "READ_CONTENT",
        "id": "10",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 1,
          "title": "first item by content channel id",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "first item by content channel id",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "21",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 2,
          "title": "second item by content channel id",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "second item by content channel id",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "32",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": null,
          "id": 3,
          "title": "third item by content channel id",
        },
        "subtitle": undefined,
        "summary": "summary data",
        "title": "third item by content channel id",
      },
    ],
    "id": "{\\"algorithms\\":[{\\"type\\":\\"CONTENT_CHANNEL\\",\\"arguments\\":{\\"contentChannelId\\":13}}],\\"title\\":\\"BULLETIN\\",\\"subtitle\\":\\"What's happening at apollos?\\"}",
    "primaryAction": undefined,
    "subtitle": "What's happening at apollos?",
    "title": "BULLETIN",
  },
]
`;

exports[`features dataSource should set cache hints for a DAILY_PRAYER algorithm 1`] = `
Array [
  Array [
    Object {
      "maxAge": 0,
      "scope": "PRIVATE",
    },
  ],
]
`;

exports[`features dataSource should set cache hints for a PERSONA_FEED algorithm 1`] = `
Array [
  Array [
    Object {
      "maxAge": 0,
      "scope": "PRIVATE",
    },
  ],
]
`;

exports[`features dataSource should set cache hints for a SERIES_IN_PROGRESS algorithm 1`] = `
Array [
  Array [
    Object {
      "maxAge": 0,
      "scope": "PRIVATE",
    },
  ],
]
`;

exports[`features dataSource should throw an error when creating a ActionListFeature from a CONTENT_CHANNEL with no contentChannelId 1`] = `
"contentChannelId is a required argument for the CONTENT_CHANNEL ActionList algorithm.
Make sure you structure your algorithm entry as \`{ type: 'CONTENT_CHANNEL', aruments: { contentChannelId: 13 } }\`"
`;

exports[`features resolver must return a personaFeed, a sermonChildrenFeed, and a contentChannelFeed for the userFeedFeatures 1`] = `
Array [
  Object {
    "__typename": "ActionListFeature",
    "actions": Array [
      Object {
        "action": "READ_CONTENT",
        "id": "10",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 1,
          "title": "first item by content channel id",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "first item by content channel id",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "21",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 2,
          "title": "second item by content channel id",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "second item by content channel id",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "32",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": null,
          "id": 3,
          "title": "third item by content channel id",
        },
        "subtitle": undefined,
        "summary": "summary data",
        "title": "third item by content channel id",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "10",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 1,
          "title": "first item",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "first item",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "21",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 2,
          "title": "second item",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "second item",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "32",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 3,
          "title": "third item",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "third item",
      },
    ],
    "id": "{\\"algorithms\\":[\\"SERMON_CHILDREN\\",\\"PERSONA_FEED\\"],\\"title\\":\\"FOR YOU\\",\\"subtitle\\":\\"Explore what God calls you to today\\"}",
    "primaryAction": undefined,
    "subtitle": "Explore what God calls you to today",
    "title": "FOR YOU",
  },
  Object {
    "__typename": "ActionListFeature",
    "actions": Array [
      Object {
        "action": "READ_CONTENT",
        "id": "10",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 1,
          "title": "first item by content channel id",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "first item by content channel id",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "21",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": Object {
            "name": "content channel",
          },
          "id": 2,
          "title": "second item by content channel id",
        },
        "subtitle": "content channel",
        "summary": "summary data",
        "title": "second item by content channel id",
      },
      Object {
        "action": "READ_CONTENT",
        "id": "32",
        "image": null,
        "relatedNode": Object {
          "__type": "UniversalContentItem",
          "contentChannel": null,
          "id": 3,
          "title": "third item by content channel id",
        },
        "subtitle": undefined,
        "summary": "summary data",
        "title": "third item by content channel id",
      },
    ],
    "id": "{\\"algorithms\\":[{\\"type\\":\\"CONTENT_CHANNEL\\",\\"arguments\\":{\\"contentChannelId\\":13}}],\\"title\\":\\"BULLETIN\\",\\"subtitle\\":\\"What's happening at apollos?\\"}",
    "primaryAction": undefined,
    "subtitle": "What's happening at apollos?",
    "title": "BULLETIN",
  },
]
`;
